--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,70 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": [],
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2021,
-    "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
     }
   },
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true
+  "plugins": ["react", "@typescript-eslint", "react-hooks"],
+  "rules": {
+    "import/no-unresolved": [2, { "caseSensitive": false }],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"],
+    "@typescript-eslint/explicit-function-return-type": [
+      "off",
+      {
+        "allowExpressions": true
+      }
+    ],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "import/prefer-default-export": "off",
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": 0,
+    "react/require-default-props": 0,
+    "react/default-props-match-prop-types": 0,
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelComponents": ["CustomInputLabel"],
+        "labelAttributes": ["label"],
+        "controlComponents": ["CustomInput"],
+        "depth": 3
+      }
+    ],
+    "react/destructuring-assignment": ["off"],
+    "camelcase": ["warn"],
+    "max-lines": ["error", { "max": 400, "skipBlankLines": true }],
+    "react/function-component-definition": ["off"],
+    "import/no-import-module-exports": "off"
   }
 }
