--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "webpack": "webpack",
     "dev": "npm run webpack serve -- --env mode=development",
     "build": "npm run webpack -- --env mode=production",
-    "format": "prettier --write \"src/**/*.{js,jsx}\" ",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "prod:analyze": "npm run build -- --env presets=analyze"
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\" ",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
+    "prod:anal": "npm run build -- --env presets=analyze",
+    "prepare": "husky install",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier \"src/**/*.{js,jsx,ts,tsx}\" --check",
+    "test-all": "yarn check-format && yarn check-lint && yarn check-types && yarn build",
+    "lint-format-stage": "lint-staged"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +22,14 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "^6.0.10",
+    "react-hot-loader": "^4.13.0",
     "typescript": "^4.5.5"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write \"src/**/*.{ts,tsx}\" "
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -27,24 +39,35 @@
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
-    "file-loader": "^6.2.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
     "mini-css-extract-plugin": "^2.5.3",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.5.1",
-    "react-hot-loader": "^4.13.0",
+    "react-dev-utils": "^12.0.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^4.1.1",
     "webpack": "^5.68.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
