--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier \"src/**/*.{js,jsx,ts,tsx}\" --check",
     "test-all": "yarn check-format && yarn check-lint && yarn check-types && yarn build",
-    "lint-format-stage": "lint-staged"
+    "lint-format-stage": "lint-staged --allow-empty option"
   },
   "author": "",
   "license": "ISC",
@@ -28,7 +28,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write \"src/**/*.{ts,tsx}\" "
+      "prettier --write \"src/**/*.{ts,tsx}\" ",
+      "eslint  --fix \"src/**/*.{ts,tsx}\" "
     ]
   },
   "devDependencies": {
